--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="//vjs.zencdn.net/8.3.0/video-js.min.css" rel="stylesheet">
 <!-- Font Awesome -->
 <link
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -59,8 +60,9 @@
         <i class="bi bi-phone-fill phone-icon"></i> +39 334 111 2372
       </div>
       <div class="social-links d-none d-md-block">
-        <a href="https://www.facebook.com/groups/365519215277725/" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://instagram.com/avo.mondovi?igshid=NTc4MTIwNjQ2YQ==" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a target="_blank" href="https://www.facebook.com/profile.php?id=100094022885427" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a target="_blank" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D%252B393341112372%26app%3Dfacebook%26entry_point%3Dpage_cta%26fbclid%3DIwAR1A39s9zr91BHqzL9mXzcGckU8sqSq311qqBGz-plAFS4U_hxKFBmQfXW8&h=AT2e8Rb-PqoKwi_ow4dLOuvsN28Bs-7J1-y9qILHjugKJUvPguv4CbE5VIXd1tRUEKpf3M3_x_PDPOxUvkCH1rsQhTfFJdNfycFOsOfYTEjK29amAXkl_ZMBMXZGP21msd3TIg" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+        <a target="_blank" href="https://instagram.com/avo.mondovi?igshid=NTc4MTIwNjQ2YQ==" class="instagram"><i class="bi bi-instagram"></i></a>
       </div>
     </div>
   </section>
@@ -77,7 +79,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">HOME</a></li>
           <li><a class="nav-link scrollto" href="#about">CHI SIAMO</a></li>
-          <li><a class="nav-link scrollto" href="#services">DIVENTA UN VOLONTARIO AVO</a></li>
+          <li><a class="nav-link scrollto" href="#services">COSA FACCIAMO</a></li>
           <li><a class="nav-link scrollto" href="#team">CONTATTI</a></li>
           <li><a class="nav-link scrollto " href="#contact">DOVE SIAMO</a></li>
           <li><a class="nav-link" href="./inner-page.html">I NOSTRI EVENTI</a></li>
@@ -136,7 +138,7 @@
         </div>
 
         <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg)">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/ospedale_mondovi.jpg)">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">DOVE SIAMO</h2>
@@ -177,7 +179,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
               <h4 class="title"><a href="">Diventa anche tu volontario AVO!</a></h4>
-              <p class="description">Bastano poche ore del proprio tempo, l’ascolto, un sorriso, per rendere meno triste la degenza di un ammalato o la sofferenza del nostro prossimo.</p>
+              <p class="description">Il volontariato è una esperienza di valori e condivisione, una opportunità di crescita personale che sviluppa il tuo potenziale, rafforza le tue competenze e capacità di ascolto.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
@@ -203,7 +205,25 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/avo.mondovi/photo_2023-06-07_22-30-41.jpg" class="img-fluid" alt="">
+            <video
+                id="my-player"
+                class="video-js"
+                controls
+                preload="auto"
+                poster="./assets/img/avo.mondovi/AVO-MONDOVI.jpg"
+                data-setup='{}'
+                width="600em">
+              <source src="./assets/videos/presentazione.mp4" type="video/mp4"></source>
+              <!--<source src="//vjs.zencdn.net/v/oceans.webm" type="video/webm"></source>-->
+              <!--<source src="//vjs.zencdn.net/v/oceans.ogv" type="video/ogg"></source>-->
+              <p class="vjs-no-js">
+                To view this video please enable JavaScript, and consider upgrading to a
+                web browser that
+                <a href="https://videojs.com/html5-video-support/" target="_blank">
+                  supports HTML5 video
+                </a>
+              </p>
+            </video>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>AVO, L'AMICO IN PIÙ CHE CONDIVIDE EMOZIONI.</h3>
@@ -248,7 +268,8 @@
 
           <div class="col-lg-4 col-md-6 content-item">
             <span>03</span>
-            <h4>Serietà, equilibrio, discrezione, intuito e capacità di relazione.</h4>
+            <h4>Empatia</h4>
+            <p>La capacità umana di mettersi al posto degli altri per comprenderli meglio.</p>
           </div>
 
           <div class="col-lg-4 col-md-6 content-item">
@@ -261,6 +282,12 @@
             <span>05</span>
             <h4>Disponibilità</h4>
             <p>È richiesta la disponibilità a svolgere almeno un turno settimanale in ospedale (mattino o pomeriggio) e a partecipare agli incontri di formazione permanente.</p>
+          </div>
+
+          <div class="col-lg-4 col-md-6 content-item">
+            <span>06</span>
+            <h4>Creatività</h4>
+            <p>Mettere in comune esperienze, soddisfazioni, fallimenti, proposte, stimola e incoraggia lo spirito del volontario a partecipare attivamente all'Associazione.</p>
           </div>
 
         </div>
@@ -307,10 +334,10 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-blue">
               <div class="icon">
-                <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                <svg width="100" height="100" viewBox="0 0 600 600" xmlns="https://www.svgrepo.com/svg/450843/event">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174"></path>
                 </svg>
-                <i class="bx bxl-dribbble"></i>
+                <i class='bx bx-home-heart' ></i>
               </div>
               <h4><a href="">La missione</a></h4>
               <p>AVO Mondovì opera nelle strutture ospedaliere, socio-sanitarie, socio-assistenziali, territoriali ed extraterritoriali, per <b>assicurare una presenza</b> accanto ai malati offrendo loro, durante la degenza, calore umano, sostegno, dialogo, aiuto per combattere contro la sofferenza, l’isolamento, la noia.</p>
@@ -336,7 +363,7 @@
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,541.5067337569781C382.14930387511276,545.0595476570109,479.8736841581634,548.3450877840088,526.4010558755058,480.5488172755941C571.5218469581645,414.80211281144784,517.5187510058486,332.0715597781072,496.52539010469104,255.14436215662573C477.37192572678356,184.95920475031193,473.57363656557914,105.61284051026155,413.0603344069578,65.22779650032875C343.27470386102294,18.654635553484475,251.2091493199835,5.337323636656869,175.0934190732945,40.62881213300186C97.87086631185822,76.43348514350839,51.98124368387456,156.15599469081315,36.44837278890362,239.84606092416172C21.716077023791087,319.22268207091537,43.775223500013084,401.1760424656574,96.891909868211,461.97329694683043C147.22146801428983,519.5804099606455,223.5754009179313,538.201503339737,300,541.5067337569781"></path>
                 </svg>
-                <i class="bx bx-tachometer"></i>
+                <i class='bx bx-donate-heart'></i>
               </div>
               <h4><a href="">Solidarietà</a></h4>
               <p>AVO Mondovì promuove la <b>cultura della solidarietà</b> nelle nuove generazioni anche costruendo un collegamento diretto e bilaterale con Scuola e Università.</p>
@@ -349,7 +376,7 @@
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,503.46388370962813C374.79870501325706,506.71871716319447,464.8034551963731,527.1746412648533,510.4981551193396,467.86667711651364C555.9287308511215,408.9015244558933,512.6030010748507,327.5744911775523,490.211057578863,256.5855673507754C471.097692560561,195.9906835881958,447.69079081568157,138.11976852964426,395.19560036434837,102.3242989838813C329.3053358748298,57.3949838291264,248.02791733380457,8.279543830951368,175.87071277845988,42.242879143198664C103.41431057327972,76.34704239035025,93.79494320519305,170.9812938413882,81.28167332365135,250.07896920659033C70.17666984294237,320.27484674793965,64.84698225790005,396.69656628748305,111.28512138212992,450.4950937839243C156.20124167950087,502.5303643271138,231.32542653798444,500.4755392045468,300,503.46388370962813"></path>
                 </svg>
-                <i class="bx bx-layer"></i>
+                <i class='bx bx-universal-access'></i>
               </div>
               <h4><a href="">Sostenere</a></h4>
               <p>AVO si propone di intervenire attivamente allo scopo di:<br>
@@ -365,7 +392,7 @@
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,532.3542879108572C369.38199826031484,532.3153073249985,429.10787420159085,491.63046689027357,474.5244479745417,439.17860296908856C522.8885846962883,383.3225815378663,569.1668002868075,314.3205725914397,550.7432151929288,242.7694973846089C532.6665558377875,172.5657663291529,456.2379748765914,142.6223662098291,390.3689995646985,112.34683881706744C326.66090330228417,83.06452184765237,258.84405631176094,53.51806209861945,193.32584062364296,78.48882559362697C121.61183558270385,105.82097193414197,62.805066853699245,167.19869350419734,48.57481801355237,242.6138429142374C34.843463184063346,315.3850353017275,76.69343916112496,383.4422959591041,125.22947124332185,439.3748458443577C170.7312796277747,491.8107796887764,230.57421082200815,532.3932930995766,300,532.3542879108572"></path>
                 </svg>
-                <i class="bx bx-slideshow"></i>
+                <i class='bx bx-dumbbell'></i>
               </div>
               <h4><a href="">Determinazione</a></h4>
               <p>I suoi volontari (circa 900) prestano servizio nelle strutture con <b>turni giornalieri di 3 ore</b> distribuiti su tutta la settimana.
@@ -379,12 +406,11 @@
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,566.797414625762C385.7384707136149,576.1784315230908,478.7894351017131,552.8928747891023,531.9192734346935,484.94944893311C584.6109503024035,417.5663521118492,582.489472248146,322.67544863468447,553.9536738515405,242.03673114598146C529.1557734026468,171.96086150256528,465.24506316201064,127.66468636344209,395.9583748389544,100.7403814666027C334.2173773831606,76.7482773500951,269.4350130405921,84.62216499799875,207.1952322260088,107.2889140133804C132.92018162631612,134.33871894543012,41.79353780512637,160.00259165414826,22.644507872594943,236.69541883565114C3.319112789854554,314.0945973066697,72.72355303640163,379.243833228382,124.04198916343866,440.3218312028393C172.9286146004772,498.5055451809895,224.45579914871206,558.5317968840102,300,566.797414625762"></path>
                 </svg>
-                <i class="bx bx-arch"></i>
+                <i class='bx bx-male-female'></i>
               </div>
               <h4><a href="">Volontariato</a></h4>
               <p><b>Gratuità</b>: l’attività viene prestata gratuitamente da ogni socio, dal Presidente al Volontario che presta servizio nella corsia.  
-                <br><b>Formazione</b>: è una formazione permanente che inizia con il corso base per l’avvio al tirocinio come Volontari in corsia e continua per assicurare un adeguato supporto mirato a migliorare la qualità del servizio presso l’Ammalato.  
-                <br><b>Integrazione</b>: non è ammessa alcuna sostituzione di compiti e funzioni di competenza degli operatori Sanitari.</p>
+                <br><b>Formazione</b>: è una formazione permanente che inizia con il corso base per l’avvio al tirocinio come Volontari in corsia e continua per assicurare un adeguato supporto mirato a migliorare la qualità del servizio presso l’Ammalato.
             </div>
           </div>
 
@@ -416,7 +442,7 @@
 
         <div class="section-title">
           <h2>Team</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p style="font-style: italic;">"L'opera umana più bella è di essere utile al prossimo."<br> - Sofocle</p>
         </div>
 
         <div class="row">
@@ -549,9 +575,9 @@
               <div class="my-3">
                 <div class="loading">Caricamento</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="sent-message">La tua richiesta è stata inviata. Grazie!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Invia</button></div>
             </form>
           </div>
 
@@ -568,11 +594,9 @@
       <h3>AVO Mondovì</h3>
       <p>SONO AVO PERCHÉ CREDO NEL VALORE DELLA SOLIDARIETÀ.</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a target="_blank" href="https://www.facebook.com/profile.php?id=100094022885427" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a target="_blank" href="https://instagram.com/avo.mondovi?igshid=NTc4MTIwNjQ2YQ==" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a target="_blank" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D%252B393341112372%26app%3Dfacebook%26entry_point%3Dpage_cta%26fbclid%3DIwAR1A39s9zr91BHqzL9mXzcGckU8sqSq311qqBGz-plAFS4U_hxKFBmQfXW8&h=AT2e8Rb-PqoKwi_ow4dLOuvsN28Bs-7J1-y9qILHjugKJUvPguv4CbE5VIXd1tRUEKpf3M3_x_PDPOxUvkCH1rsQhTfFJdNfycFOsOfYTEjK29amAXkl_ZMBMXZGP21msd3TIg" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
@@ -589,6 +613,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <!-- Template Main JS File -->
   <script type="module" src="assets/js/main.js"></script>
+  <script src="//vjs.zencdn.net/8.3.0/video.min.js"></script>
 
 </body>
 
