--- a/inner-page.html
+++ b/inner-page.html
@@ -67,8 +67,9 @@
         <i class="bi bi-phone-fill phone-icon"></i> +39 334 111 2372
       </div>
       <div class="social-links d-none d-md-block">
-        <a href="https://www.facebook.com/groups/365519215277725/" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://instagram.com/avo.mondovi?igshid=NTc4MTIwNjQ2YQ==" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a target="_blank" href="https://www.facebook.com/profile.php?id=100094022885427" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a target="_blank" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D%252B393341112372%26app%3Dfacebook%26entry_point%3Dpage_cta%26fbclid%3DIwAR1A39s9zr91BHqzL9mXzcGckU8sqSq311qqBGz-plAFS4U_hxKFBmQfXW8&h=AT2e8Rb-PqoKwi_ow4dLOuvsN28Bs-7J1-y9qILHjugKJUvPguv4CbE5VIXd1tRUEKpf3M3_x_PDPOxUvkCH1rsQhTfFJdNfycFOsOfYTEjK29amAXkl_ZMBMXZGP21msd3TIg" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+        <a target="_blank" href="https://instagram.com/avo.mondovi?igshid=NTc4MTIwNjQ2YQ==" class="instagram"><i class="bi bi-instagram"></i></a>
       </div>
     </div>
   </section>
@@ -134,6 +135,7 @@
     <section class="inner-page" style="display: flex;">
       <div class="cardContainer animate__animated animate__bounce hasTooltip tipso prefers-reduced-motion">
         <div class="item-container" onclick="window.dialog.showModal();">
+          <!--<div class="item-container" onclick="window.dialog.showModal();">-->
           <div class="img-container">
               <img src="./assets/img/avo.mondovi/avo.mondovi-07062023-0004.webp" alt="Event image">
           </div>
@@ -145,7 +147,7 @@
                   <p class="title">INCONTRO AVO</p>
                   <div class="separator"></div>
                   <p class="info" style="text-align: center;">Sede della Croce Rossa di Mondovì - via Croce Rossa 4</p>
-                  <p class="price">In corso</p>
+                  <p class="price">Già concluso</p>
 
                   <div class="additional-info">
                       <p class="info">
@@ -160,7 +162,7 @@
               </div>
           </div>
       </div>
-      <dialog id="dialog" class="animate__animated animate__fadeInLeft animate__fadeInLeft">
+      <!--<dialog id="dialog" class="animate__animated animate__fadeInLeft animate__fadeInLeft">
         <h2><b>Incontro AVO</b></h2>
         <p class="info" style="text-align: center;">
           <i class="far fa-calendar-alt"></i>
@@ -185,7 +187,7 @@
              Maurizio Origlia.</li>
         </ol>
         <button onclick="window.dialog.close();" aria-label="close" class="x">❌</button>
-      </dialog>
+      </dialog>-->
       </div>
       <div class="cardContainer animate__animated animate__bounce">
         <div class="item-container concluso">
@@ -222,15 +224,13 @@
   </main><!-- End #main -->
 
   <footer id="footer">
-    <div class="container" style="display: block;">
-      <h3 class="footerElems">AVO Mondovì</h3>
-      <p class="footerElems">SONO AVO PERCHÉ CREDO NEL VALORE DELLA SOLIDARIETÀ.</p>
-      <div class="social-links footerElems">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+    <div class="container"  style="display: block;">
+      <h3>AVO Mondovì</h3>
+      <p>SONO AVO PERCHÉ CREDO NEL VALORE DELLA SOLIDARIETÀ.</p>
+      <div class="social-links">
+        <a target="_blank" href="https://www.facebook.com/profile.php?id=100094022885427" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a target="_blank" href="https://instagram.com/avo.mondovi?igshid=NTc4MTIwNjQ2YQ==" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a target="_blank" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D%252B393341112372%26app%3Dfacebook%26entry_point%3Dpage_cta%26fbclid%3DIwAR1A39s9zr91BHqzL9mXzcGckU8sqSq311qqBGz-plAFS4U_hxKFBmQfXW8&h=AT2e8Rb-PqoKwi_ow4dLOuvsN28Bs-7J1-y9qILHjugKJUvPguv4CbE5VIXd1tRUEKpf3M3_x_PDPOxUvkCH1rsQhTfFJdNfycFOsOfYTEjK29amAXkl_ZMBMXZGP21msd3TIg" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
